{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 76,
  "lineage": "6b96383b-24ec-a714-95ff-7ba790d0ac50",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0060d9c11ba22d2f6",
            "association_id": "eipassoc-0fcbd0fb611d832ea",
            "domain": "vpc",
            "id": "eipalloc-0060d9c11ba22d2f6",
            "instance": "i-0fd5efeab19fc68cf",
            "network_border_group": "us-east-2",
            "network_interface": "eni-09557173e47e4e4d8",
            "private_dns": "ip-10-0-1-165.us-east-2.compute.internal",
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-3-129-175-51.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.175.51",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins_eip"
            },
            "tags_all": {
              "Name": "jenkins_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_instance.aws_instance.jenkins_server",
            "module.ec2_instance.aws_key_pair.tutorial_kp",
            "module.ec2_instance.data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.tutorial_jenkins_sg",
            "module.vpc.aws_subnet.tutorial_public_subnet",
            "module.vpc.aws_vpc.tutorial_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ada6d94f396377f2",
            "arn": "arn:aws:ec2:us-east-2:274127640471:instance/i-0fd5efeab19fc68cf",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd5efeab19fc68cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tutorial_kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09557173e47e4e4d8",
            "private_dns": "ip-10-0-1-165.us-east-2.compute.internal",
            "private_ip": "10.0.1.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-004d2fb99efa0ed79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ef16b6407f1e9bf",
            "tags": {
              "Name": "jenkins_server"
            },
            "tags_all": {
              "Name": "jenkins_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02b482bda8ad0086f"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_key_pair.tutorial_kp",
            "module.ec2_instance.data.aws_ami.ubuntu",
            "module.security_group.aws_security_group.tutorial_jenkins_sg",
            "module.vpc.aws_subnet.tutorial_public_subnet",
            "module.vpc.aws_vpc.tutorial_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tutorial_jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:274127640471:security-group/sg-02b482bda8ad0086f",
            "description": "Security group for jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b482bda8ad0086f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "75.8.254.209/32"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tutorial_jenkins_sg",
            "name_prefix": "",
            "owner_id": "274127640471",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tutorial_jenkins_sg"
            },
            "tags_all": {
              "Name": "tutorial_jenkins_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-089f33b7ce118e4b6"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tutorial_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:274127640471:internet-gateway/igw-0fbebe8bda6b09aa4",
            "id": "igw-0fbebe8bda6b09aa4",
            "owner_id": "274127640471",
            "tags": {
              "Name": "tutorial_igw"
            },
            "tags_all": {
              "Name": "tutorial_igw"
            },
            "vpc_id": "vpc-089f33b7ce118e4b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tutorial_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:274127640471:route-table/rtb-001965a521203df67",
            "id": "rtb-001965a521203df67",
            "owner_id": "274127640471",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fbebe8bda6b09aa4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089f33b7ce118e4b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tutorial_igw",
            "module.vpc.aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c8b30d1875fc9f7",
            "route_table_id": "rtb-001965a521203df67",
            "subnet_id": "subnet-00ef16b6407f1e9bf"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tutorial_igw",
            "module.vpc.aws_route_table.tutorial_public_rt",
            "module.vpc.aws_subnet.tutorial_public_subnet",
            "module.vpc.aws_vpc.tutorial_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tutorial_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:274127640471:subnet/subnet-00ef16b6407f1e9bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ef16b6407f1e9bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "274127640471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tutorial_public_subnet"
            },
            "tags_all": {
              "Name": "tutorial_public_subnet"
            },
            "vpc_id": "vpc-089f33b7ce118e4b6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tutorial_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tutorial_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:274127640471:vpc/vpc-089f33b7ce118e4b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bcacbf869c7e524a",
            "default_route_table_id": "rtb-074875db44e285e1a",
            "default_security_group_id": "sg-01876956f65aacdc2",
            "dhcp_options_id": "dopt-0a4a50e4dd725a7a4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-089f33b7ce118e4b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074875db44e285e1a",
            "owner_id": "274127640471",
            "tags": {
              "Name": "tutorial_vpc"
            },
            "tags_all": {
              "Name": "tutorial_vpc"
            }
          }
        }
      ]
    }
  ]
}